--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-wrench text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Developers</h3>
-              <p class="text-muted mb-0">If you need a single cloud platform providing powerful tooling, scallable infrastructure and huge number of reusable components.</p>
+              <p class="text-muted mb-0">If you need a single cloud platform providing powerful tooling, scallable infrastructure and huge number of reusable components (<a href='/become_developer.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-gift text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Vendors</h3>
-              <p class="text-muted mb-0">If you want to build solutions tailored for specific customer's needs.</p>
+              <p class="text-muted mb-0">If you want to build solutions tailored for specific customer's needs (<a href='/become_vendor.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-dollar text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Sellers</h3>
-              <p class="text-muted mb-0">If you are a sales representative who wants to expand own products portfolio</p>
+              <p class="text-muted mb-0">If you are a sales representative who wants to expand own products portfolio (<a href='/become_seller.html'>more...</a>)</p>
             </div>
           </div>
         </div>
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" onclick="location='solution-composer.html'">
+            <a class="portfolio-box" onclick="location='/tools-solution-composer.html'">
               <img class="img-fluid" src="img/portfolio/thumbnails/solution-composer.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -165,7 +165,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" onclick="location='seller-dashboard.html'">
+            <a class="portfolio-box" onclick="location='/tools-seller-dashboard.html'">
               <img class="img-fluid" src="img/portfolio/thumbnails/seller-dashboard.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -180,7 +180,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" onclick="location='development-environment.html'">
+            <a class="portfolio-box" onclick="location='/tools-development-environment.html'">
               <img class="img-fluid" src="img/portfolio/thumbnails/development-environment.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -195,7 +195,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" onclick="location='component-registry.html'">
+            <a class="portfolio-box" onclick="location='/tools-component-registry.html'">
               <img class="img-fluid" src="img/portfolio/thumbnails/component-registry.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -210,7 +210,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" onclick="location='collaboration-board.html'">
+            <a class="portfolio-box" onclick="location='/tools-collaboration-board.html'">
               <img class="img-fluid" src="img/portfolio/thumbnails/collaboration-board.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
