--- a/products/automotive.html
+++ b/products/automotive.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Automotive Applications
+industry: automotive
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The global automotive industry consists of companies and organizations specialized in designing, manufacturing, and marketing of cars, buses, and other types of motor vehicles. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.automotive %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
