--- a/products/distribution.html
+++ b/products/distribution.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Wholesale and Distribution Applications
+industry: distribution
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The wholesale distribution industry sells goods to non-end consumers. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.distribution %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
