--- a/products/education.html
+++ b/products/education.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Education and Research Applications
+industry: education
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>Education and research are both highly interconnected. People use the gathered through the years skills and knowledge to work on innovative breakthroughs and to make groundbreaking discoveries. Here you can find applications related to these fields.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.education %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
