--- a/products/engineering.html
+++ b/products/engineering.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Engineering and Construction Applications
+industry: engineering
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The engineering and construction industries deliver architectural, engineering, and construction services. In order to achieve their goals, they have to follow the latest IT trends. Here you can find applications related to these industries.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.engineering %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
