--- a/products/healthcare.html
+++ b/products/healthcare.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Healtcare Applications
+industry: healthcare
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The healthcare industry uses the latest technology advancements to meet the health needs of modern society. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.healthcare %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
