--- a/products/it.html
+++ b/products/it.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Information Technology Applications
+industry: it
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The IT sector puts emphasis on anything related to networking, hardware, and software services. A large part of modern-day companies have their own IT departments. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.it %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
