--- a/products/professional.html
+++ b/products/professional.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Professional Services Applications
+industry: professional
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>Professional services are provided by individuals with solid professional experience. These people are usually experts in a certain field of knowledge, and they are often officially certified. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.professional %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
