--- a/products/public.html
+++ b/products/public.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Public Sector Applications
+industry: public
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The public sector consists of public institutions and organizations that provide services helpful to all members of society. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.public %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
