--- a/products/realestate.html
+++ b/products/realestate.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Real Estate Applications
+industry: realestate
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>Real estate companies are the core of this industry. They manage real estate properties and trade them to individuals and business entities alike. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.realestate %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
