--- a/products/retail.html
+++ b/products/retail.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Retail Applications
+industry: retail
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The retail industry consists of vendors aiming to sell their products to customers for a profit. Nowadays, online shopping is one of the most popular types of retailing. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.retail %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
