--- a/products/telecom.html
+++ b/products/telecom.html
@@ -1,16 +1,15 @@
 ---
 layout: industry
-title: Travel Applications
-industry: travel
+title: Telecommunications Applications
+industry: telecom
 ---
 
-
-	<p>The travel and transportation industries deliver services related to the movement of people, products, goods, and animals between two or more geographic locations. Here you can find applications related to these industries.
+	<p>The telecommunications industry consists of telecommunications companies and internet service providers throughout the world. Here you can find applications related to this industry.
 	</p>
 	<br>
 	<div>
 		<div>
-			{% for post in site.tags.travel %}
+			{% for post in site.tags.telecommunications %}
 				{% if post.categories contains 'apps' %}
 					<div>
 						<p>
