--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-wrench text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Developers</h3>
-              <p class="text-muted mb-0">If you need a single cloud platform providing powerful tooling, scallable infrastructure and huge number of reusable components (<a href='/become_developer.html'>more...</a>)</p>
+              <p class="text-muted mb-0">If you need a single cloud platform providing powerful tooling, scallable infrastructure and huge number of reusable components (<a href='/become-developer.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-gift text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Vendors</h3>
-              <p class="text-muted mb-0">If you want to build solutions tailored for specific customer's needs (<a href='/become_vendor.html'>more...</a>)</p>
+              <p class="text-muted mb-0">If you want to build solutions tailored for specific customer's needs (<a href='/become-vendor.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-dollar text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Sellers</h3>
-              <p class="text-muted mb-0">If you are a sales representative who wants to expand own products portfolio (<a href='/become_seller.html'>more...</a>)</p>
+              <p class="text-muted mb-0">If you are a sales representative who wants to expand own products portfolio (<a href='/become-seller.html'>more...</a>)</p>
             </div>
           </div>
         </div>
