--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
   <head>
+  
+  
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120521332-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'UA-120521332-1');
+	</script>
+  
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -136,14 +148,14 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <div class="portfolio-box" onclick="location='marketplace.html'">
-              <img class="img-fluid" src="img/portfolio/thumbnails/market-place.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/marketplace.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
                     Customers
                   </div>
                   <div class="project-name">
-                    Market Place
+                    Marketplace
                   </div>
                 </div>
               </div>
