--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                           <li><a href="/become-seller.html" target="_blank" >Become a Sales Representative</a></li>
                           <li><a href="/become-vendor.html" target="_blank" >Become a Solution Vendor</a></li>
                           <li><a href="/become-developer.html" target="_blank" >Join as a Developer</a></li>
-                          <li><a href="mailto:office.promart.io@gmail.com">office.promart.io@gmail.com</a></li>
+                          <li><a href="mailto:office.promart.io@gmail.com">Contact us</a></li>
                       </ul>
                   </div>
                   <div class="col-lg-4 heading-lead">
