--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                       <div class="clearfix"></div>
                       <h4>Community</h4>
                   <ul>
-                            <li><a href="{{ site.url }}/news.html" target="_blank">Newsletter</a></li>
-                            <li><a href="{{ site.url }}/blogs.html" target="_blank">Blogs</a></li>
+                            <li><a href="/news.html" target="_blank">Newsletter</a></li>
+                            <li><a href="/blogs.html" target="_blank">Blogs</a></li>
                             <li><a href="https://github.com/promart-io/operations-forum/issues" target="_blank">Forum</a></li>
                             <li><a href="https://github.com/promart-io/operations-wiki/wiki" target="_blank">Wiki</a></li>
                         </ul>
