added more points for developers and vendors

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">To whom it matters?</h2>
+            <h2 class="section-heading">What it is for you?</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -115,28 +115,28 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-shopping-basket text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Customers</h3>
-              <p class="text-muted mb-0">If you are looking for a modern, extendable and secure cloud applications.</p>
+              <p class="text-muted mb-0">looking for a modern, extendable and secure cloud applications for their specific business (<a href='/become-customer.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-wrench text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Developers</h3>
-              <p class="text-muted mb-0">If you need a single cloud platform providing powerful tooling, scallable infrastructure and huge number of reusable components (<a href='/become-developer.html'>more...</a>)</p>
+              <p class="text-muted mb-0">need a single cloud platform providing powerful tooling, scallable infrastructure and a huge number of reusable components (<a href='/become-developer.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-gift text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Vendors</h3>
-              <p class="text-muted mb-0">If you want to build solutions tailored for specific customer's needs (<a href='/become-vendor.html'>more...</a>)</p>
+              <p class="text-muted mb-0">want to build solutions tailored for specific customer's needs (<a href='/become-vendor.html'>more...</a>)</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-dollar text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">For Sellers</h3>
-              <p class="text-muted mb-0">If you are a sales representative who wants to expand own products portfolio (<a href='/become-seller.html'>more...</a>)</p>
+              <p class="text-muted mb-0">want to expand own products portfolio (<a href='/become-seller.html'>more...</a>)</p>
             </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Free Registration!</h2>
+        <h2 class="mb-4">Partner Registration!</h2>
         <a class="btn btn-light btn-xl sr-button" href="https://github.com/promart-io/promart-requests/issues">Join Now!</a>
       </div>
     </section>
