--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-box" onclick="location='marketplace.html'">
+            <div class="portfolio-box" onclick="location='/marketplace/'">
               <img class="img-fluid" src="img/portfolio/thumbnails/marketplace.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
