--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -30,10 +30,10 @@
 </head>
 
 <body itemscope itemtype="http://schema.org/SoftwareApplication">
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<nav class="bg-dark fixed-top navbar navbar-dark navbar-default" role="navigation">
 		<div class="container">
 			<div class="navbar-header page-scroll">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-main-collapse">
 					<i class="fa fa-bars"></i>
 				</button>
 				<a class="navbar-brand" href="/#home">ProMART</a>
@@ -98,19 +98,9 @@
 		<!-- /.container -->
 	</nav>
 
-	<div class="intro-header grid" id="home">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="intro-message intro-messager pull-left">
-						<h3 itemprop="name"> <i class="fa fa-tasks"></i> ProMART - The Open Source Business Applications Market</h3>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- /.intro-header -->
-
+	<br>
+	<br>
+	<br>
 	<div ng-view></div>
 	<footer>
 		<div class="container">
