--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -167,5 +167,6 @@
 	<script type="text/javascript" src="js/controllers/marketplace/apps/all.js"></script>
 	<script type="text/javascript" src="js/controllers/marketplace/apps/featured.js"></script>
 	<script type="text/javascript" src="js/controllers/marketplace/apps/recent.js"></script>
+	<script type="text/javascript" src="js/controllers/marketplace/apps/app.js"></script>
 </body>
 </html>
