--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" onclick="location='/tools-development-environment.html'">
+            <a class="portfolio-box" onclick="location='https://ide.ingress.dev.promart.shoot.canary.k8s-hana.ondemand.com'">
               <img class="img-fluid" src="img/portfolio/thumbnails/development-environment.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
