Load resources from CDN

--- a/marketplace.html
+++ b/marketplace.html
@@ -127,15 +127,14 @@
     <div ng-include="'tmpl/footer.tmpl.html'"></div>
 
     <!-- jQuery -->
-    <script type="text/javascript" src="../../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script type="text/javascript" src="../../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- AngularJS -->
-	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-resource.min.js"></script>
 	
 	<script type="text/javascript" src="marketplace.js"></script>
 	
